# reelsynth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: app.rs  audio_commands.rs  audio_host.rs  main.rs  midi_host.rs  midi_input.rs
brand/: DESIGN.md  MAJICO.md
brand/artifacts/: denoise_opt_gate.json  overnight_gpu_rl_arch_latest.json
brand/mockups/: DECISIONS.md  (+6 more)
docs/: FORMAT.md  GETTING_STARTED.md  GTM.md  INTEROP.md  MIGRATION_REFACTOR.md  NAMING.md  SERUM_FXP.md  UI.md  WHITEPAPER_DENOISE_OPT.md
plugin/: Cargo.toml  README.md
scripts/: bench_meta_approaches_5k.py  bench_meta_hp_sensitivity.py  bench_signal_heal_transfer.py  bench_vibrato_spectrogram.py  capture-ui-window  capture-ui-window.swift  denoise_arch_blocks.py  denoise_meta_evo.py  download_signal_heal_data.py  export_meta_hear_presets.py  finalize_signal_heal_transfer.py  finish_overnight_1m_to_paper.py  git-with-token.ps1  launch_meta_approach_compare.py  meta_approach_dashboard.py  overnight_1m_durable_finisher.ps1  overnight_gpu_babysit_1m.ps1  overnight_gpu_rl_arch.py  overnight_gpu_watchdog.ps1  plot_meta_heal_samples.py  plot_overnight_history.py  plot_paper_v8_listening_assets.py  release.sh  start_overnight_gpu_detached.ps1  wait_1m_then_finish.ps1
src/: crackle_diag.rs  denoise_meta.rs  denoise_meta_overnight.rs  denoise_opt.rs  fm.rs  fx.rs  lib.rs  modulation.rs  patch.rs  preview.rs  scope.rs  sound_bench.rs  wavetable.rs  wt_quant.rs
tests/: engine_rt.rs  qa_matrix.rs
ui/: Cargo.toml
ui-theme/: Cargo.toml
(+218 files in other folders)
